2009-10-09 [paul]	2.0.6

	2.0.6 released


2009-07-15 [colin]	2.0.5cvs1

	* src/month-view.c
		Fix viewing event starting previous month
		Thanks to Paul Rolland

2009-07-03 [paul]	2.0.5

	2.0.5 released

2009-07-03 [paul]	2.0.4cvs11

	* configure.ac
	* po/id.po
	* po/ru.po
		added by MSulchan Darmawan and Aleksei Miheev
	* po/cs.po
	* po/es.po
	* po/fi.po
	* po/fr.po
	* po/hu.po
	* po/it.po
	* po/ja.po
	* po/pt_BR.po
		updated by David Vachulka, Ricardo Mones, Tommi Pirinen,
		Colin Leroy, Pader Rezso, Andrea Spadaccini, kazken3,
		and Frederico Goncalves Guimaraes

2009-06-12 [iwkse]	2.0.4cvs10

	* src/vcalendar.c
	* src/vcal_meeting_gtk.c
	* src/vcal_manager.c
        Fix generate_msgid to reflect
        API change

2009-04-03 [colin]	2.0.4cvs9

	* libical/libical/Makefile.am
		Fix bug 1890, 'include/ical.h conflicts with 
		a file installed by libical'

2009-03-31 [colin]	2.0.4cvs8

	* libical/libical/pvl.c
		Fix crash in pvl_head. Patch by Michael
		Rasmussen

2009-03-20 [colin]	2.0.4cvs7

	* src/vcal_folder.c
		Fix leak

2009-03-20 [colin]	2.0.4cvs6

	* src/vcal_meeting_gtk.c
		Don't put Location in place of Summary

2009-03-18 [colin]	2.0.4cvs5

	* src/vcal_manager.c
		Fix double Location
	* src/vcalendar.c
		Fix replying to an event update.

2009-03-17 [colin]	2.0.4cvs4

	* src/vcal_meeting_gtk.c
		Fix Location line, thanks to Miras

2009-03-17 [colin]	2.0.4cvs3

	* src/vcal_folder.c
	* src/vcal_manager.c
	* src/vcal_manager.h
	* src/vcal_meeting_gtk.c
	* src/vcalendar.c
		Add support for the Location field. Patch by
		Pascal Eberhard <pascal.eberhard at gmail.com>,
		fixes bug 1852 'vCalendar Plugin should display 
		Location of events'

2009-03-08 [paul]	2.0.4cvs2

	* configure.ac
	* po/ja.po
		add Japanese translation, submitted by kazken3

2009-03-06 [colin]	2.0.4cvs1

	* libical/libical/sspm.c
		Fix format string

2009-03-06 [paul]	2.0.4

	2.0.4 released

2009-03-06 [paul]	2.0.3cvs4

	* po/fi.po
	* po/fr.po
	* po/hu.po
	* po/pt_BR.po