@@ -229,3 +229,4 @@
 ( cvs diff -u -r 1.2.2.88 -r 1.2.2.89 src/vcalendar.c;  cvs diff -u -r 1.1.2.88 -r 1.1.2.89 src/vcal_meeting_gtk.c;  cvs diff -u -r 1.1.2.81 -r 1.1.2.82 src/vcal_manager.c;  ) > 2.0.4cvs10.patchset
 ( cvs diff -u -r 1.2.2.335 -r 1.2.2.336 configure.ac;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 po/cs.po;  cvs diff -u -r 1.1.2.12 -r 1.1.2.13 po/es.po;  cvs diff -u -r 1.1.2.15 -r 1.1.2.16 po/fi.po;  cvs diff -u -r 1.1.2.13 -r 1.1.2.14 po/fr.po;  cvs diff -u -r 1.1.2.9 -r 1.1.2.10 po/hu.po;  diff -u /dev/null po/id.po;  cvs diff -u -r 1.1.2.9 -r 1.1.2.10 po/it.po;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 po/ja.po;  cvs diff -u -r 1.1.2.13 -r 1.1.2.14 po/pt_BR.po;  diff -u /dev/null po/ru.po;  ) > 2.0.4cvs11.patchset
 ( cvs diff -u -r 1.1.2.21 -r 1.1.2.22 src/month-view.c;  ) > 2.0.5cvs1.patchset
+( cvs diff -u -r 1.1.2.2 -r 1.1.2.3 libical/libical/icalderivedvalue.c.in;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 libical/libical/icalparser.c;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 libical/scripts/mkderivedvalues.pl;  cvs diff -u -r 1.1.2.82 -r 1.1.2.83 src/vcal_manager.c;  ) > 2.0.6cvs1.patchset
