@@ -3,7 +3,7 @@
   FILE: icalvalue.c
   CREATOR: eric 02 May 1999
   
-  $Id: icalderivedvalue.c.in,v 1.1.2.2 2005-07-15 09:21:03 twb Exp $
+  $Id: icalderivedvalue.c.in,v 1.1.2.3 2009-10-30 09:27:25 colin Exp $
 
 
  (C) COPYRIGHT 2000, Eric Busboom, http://www.softwarestudio.org
@@ -113,7 +113,7 @@ void icalvalue_set_x(icalvalue* value, const char* v) {
  }
 const char* icalvalue_get_x(icalvalue* value) {
 
-    icalerror_check_arg( (value!=0),"value");
+    icalerror_check_arg_rz( (value!=0),"value");
     icalerror_check_value_type(value, ICAL_X_VALUE);
     return ((struct icalvalue_impl*)value)->x_value;
 }
@@ -202,7 +202,6 @@ icalvalue_get_trigger(icalvalue* value)
     struct icalvalue_impl *impl = (struct icalvalue_impl*)value;
     struct icaltriggertype tr;
 
-    icalerror_check_arg( (value!=0),"value");
     icalerror_check_arg( (value!=0),"value");
 
     if(impl->kind == ICAL_DATETIME_VALUE){
